Restructured the project. Created Liquibase app. Moved schema creation to liquibase.